--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,11 @@
 			<version>3.3.1</version>
 		</dependency>
 		<dependency>
+			<groupId>br.com.caelum</groupId>
+			<artifactId>iogi</artifactId>
+			<version>0.8.2</version>
+		</dependency>
+		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
 			<version>2.5</version>
@@ -31,7 +36,14 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+
 	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.mortbay.jetty</groupId>
+				<artifactId>jetty-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
 		<finalName>neo4j-places-and-people</finalName>
 	</build>
 </project>
